update readme file

--- a/DynamoDBTest/README.html
+++ b/DynamoDBTest/README.html
@@ -3,6 +3,15 @@
 <style>
 /*************************************
 GENERAL
+{
+"action":"fetchAll",
+"region":"ap-south-1",
+"customer_Id":"4",
+"client_name":"luca",
+"company_name":"minfy",
+"phone_no":"8260571625",
+"email_id":"luca@gmail.com"
+}
 *************************************/
 body {
     margin: 15;
